# fichero

./: .gitignore  FICHERO CLI README.md  Project Log.txt.md  README.md  Weasel Project README.md  aj-summarization-notes.md  crop.py  eap1477_config.yml  execution_config.yml  fichero.py  fichero_cli.py  fichero_system_plan  project.yml  pyproject.toml  readme.md  requirements.txt
article/: 24-02-09 Ollama, LangGraph, and Spacy.md  abstract.md
daniel_test_code/: ner_2.py  ner_dolly.py
daniel_test_code/EAP1477_MFC_B10_Doc03_BernatvsLozano_IMG_001-extracts/: 1-EAP1477_MFC_B10_Doc03_BernatvsLozano_IMG_001-extracts.md  10-EAP1477_MFC_B10_Doc03_BernatvsLozano_IMG_010-extracts.md  100-EAP1477_MFC_B10_Doc03_BernatvsLozano_IMG_100-extracts.md  101-EAP1477_MFC_B10_Doc03_BernatvsLozano_IMG_101-extracts.md  (+52 more)
fiche_templates/: document_template.json
fichero_cli/: folder_monitor.py
old/: crop.py  even_older_crop.py
project_folder/: collections.txt  linux_cuda.yml  project.yml  requirements.txt
project_folder/scripts/: doc_summary.py  download.py  (+15 more)
prompts/: cleanup_ocr.txt  cleanup_ocr_agent.txt  create_metadata_qa_implement.txt
scripts/: build_documents_manifest.py  convert_to_jpg.py  convert_to_word.py  crop.py  download_images.py  enhance.py  fuzzy_clean.py  prepare_images.py  recombine_segments.py  rotate.py  segment.py  split.py  split_pdfs.py  test_workflow.sh  transcribe_lmstudio.py  transcribe_qwen_2b.py  transcribe_qwen_7b.py  transcribe_qwen_max.py
slipbox_code/: CLASS DESCRIPTIONS.md  Code.savedSearch  README.md  Short Descritpion.txt  carney.txt  slipbox.py
(+322 files in other folders)
