[tool.poetry]
name = "fichero"
version = "0.1.0"
description = ""
authors = ["apjanco <apjanco@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.116.0"
httpx = "^0.26.0"
srsly = "^2.4.8"
requests = "^2.31.0"
typer = "^0.9.0"
pillow = "^10.2.0"
escriptorium-connector = "^0.2.6"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
